--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,3 @@
 project(boost_test)
-set(CMAKE_CXX_STANDARD 11)
-add_executable(boost_test main.cpp safe_float.hpp)
+set(CMAKE_CXX_STANDARD 17)
+add_executable(boost_test main.cpp Boost.SafeFloat/competency-test-cpp17.hpp)
